packages/shulker-operator/src/reconcilers/proxy_fleet/snapshots/shulker_operator__reconcilers__proxy_fleet__config_map__bungeecord__tests__from_spec.snap
---
source: packages/shulker-operator/src/reconcilers/proxy_fleet/config_map.rs
expression: config
---
servers:
  limbo:
    motd: A Motd
    address: "localhost:30001"
    restricted: false
  lobby:
    motd: A Motd
    address: "localhost:30000"
    restricted: false
listeners:
  - host: "0.0.0.0:25577"
    query_port: 25577
    motd: A Motd
    max_players: 100
    priorities:
      - lobby
      - limbo
    ping_passthrough: false
    force_default_server: true
    proxy_protocol: true
groups: {}
online_mode: true
ip_forward: true
prevent_proxy_connections: true
enforce_secure_profile: true
log_pings: false

